# codes

./: CMakeLists.txt  LICENSE  README.md
inc/: conv.h  debug_trace.h  gf2.h  rs.h
sim/: plot_curve.gp  sim_viterbi.py
src/: conv.c  gf2.c  gf2_8.c  gf2_8.h  gf2m.c  gf2m.h  rs.c
test/: CMakeLists.txt  gen_gf2.py  plot_trellis.py  plot_viterbi.py  pycode.i  read_trace.py  test_gf2.py  test_rs.py  test_rs255.py  test_simple_cc.py  test_viterbi.py
